--- a/EXEMLO CÓDIGO/index.html
+++ b/EXEMLO CÓDIGO/index.html
@@ -11,6 +11,8 @@
     <h1>Teste de código HTML</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, dicta modi dignissimos ab molestiae nemo magni voluptatum ullam, tenetur iste a expedita commodi. Recusandae doloremque vel deserunt, suscipit ratione nesciunt.</p>
+    <h2>Segundo paragrafo</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est, fuga at. Molestias quis expedita dicta, sapiente quia sit accusamus nulla! Est commodi illum voluptate architecto nulla tempora dolorum beatae voluptates.</p>
     
 </body>
 </html>
